--- a/style.css
+++ b/style.css
@@ -1,10 +1,20 @@
 .content {
     max-width: 1200px;
     margin: 0 auto;
-    margin-top: 500px;
-    margin-bottom: 500px;
+    padding: 4%;
     display: flex;
     flex-wrap: wrap;
+}
+.install-btn {
+    position: fixed;
+    top: 20px;
+    right: 20px;
+    cursor: pointer;
+    padding: 8px 16px;
+    background-color: #fff;
+    border: none;
+    box-shadow: 1px 1px 5px rgba(0,0,0,.1);
+    border-radius: 8px;
 }
 
 /* .btn-up {
