--- a/style.css
+++ b/style.css
@@ -5,14 +5,14 @@ body {
     max-width: 1000px;
     margin: 0 auto;
     margin-bottom: 60px;
-    padding: 4%;
+    padding: 60px 4%;
     display: flex;
     flex-wrap: wrap;
 }
 .install-btn {
     position: fixed;
     top: 20px;
-    right: 20px;
+    right: 100px;
     cursor: pointer;
     padding: 8px 16px;
     background-color: #fff;
