--- a/style.css
+++ b/style.css
@@ -22,6 +22,13 @@ body {
     display: none;
 }
 
+@media (max-width:900px) {
+    .install-btn {
+        left: 20px;
+        top: 20px;
+    }
+}
+
 /* .btn-up {
     position: fixed;
     left: 30px;
