--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
     border: none;
     box-shadow: 5px 5px 5px rgba(0,0,0,.1);
     border-radius: 8px;
-    display: none;
+    /* display: none; */
 }
 
 @media (max-width:900px) {
