--- a/style.css
+++ b/style.css
@@ -1,32 +1,64 @@
 body {
-    background: linear-gradient(to right, #d3b971 0%, #eedcb3 20%, #eedcb3 80%, #d3b971 100%);
+  background: linear-gradient(
+    to right,
+    #d3b971 0%,
+    #eedcb3 20%,
+    #eedcb3 80%,
+    #d3b971 100%
+  );
 }
 .content {
-    max-width: 1000px;
-    margin: 0 auto;
-    margin-bottom: 60px;
-    padding: 60px 4%;
-    display: flex;
-    flex-wrap: wrap;
+  max-width: 1000px;
+  margin: 0 auto;
+  margin-bottom: 60px;
+  padding: 60px 4%;
+  display: flex;
+  flex-wrap: wrap;
 }
 .install-btn {
-    position: fixed;
-    top: 20px;
-    right: 100px;
-    cursor: pointer;
-    padding: 8px 16px;
-    background-color: #fff;
-    border: none;
-    box-shadow: 5px 5px 5px rgba(0,0,0,.1);
-    border-radius: 8px;
-    display: none;
+  position: fixed;
+  top: 20px;
+  right: 100px;
+  cursor: pointer;
+  padding: 8px 16px;
+  background-color: #fff;
+  border: none;
+  box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  display: none;
 }
 
-@media (max-width:900px) {
-    .install-btn {
-        right: 20px;
-        top: 20px;
-    }
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-content {
+  background-color: rgba(243, 242, 241);
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 5px;
+  width: 80%;
+}
+
+.close {
+  color: #5e5d5d;
+  float: right;
+  font-size: 28px;
+}
+
+@media (max-width: 900px) {
+  .install-btn {
+    right: 20px;
+    top: 20px;
+  }
 }
 
 /* .btn-up {
