--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
   display: flex;
   flex-wrap: wrap;
 }
-.install-btn, .install-btn-instruction {
+.install-btn, .instruction-btn {
   position: fixed;
   top: 20px;
   right: 100px;
