--- a/style.css
+++ b/style.css
@@ -55,7 +55,7 @@ body {
 }
 
 @media (max-width: 900px) {
-  .install-btn {
+  .install-btn, .instruction-btn {
     right: 20px;
     top: 20px;
   }
